cleanup (remove xml)